Eliminate java.util.Vector from codebase.
Vector is synchronized and adds additional unnecessary overhead. In
addition it is considered deprecated for several reasons so it makes
sense to remove it from service.